# spider-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
browser/: logging.py  main.py  middleware.py  run.py  settings.py  utils.py
browser/ai_captcha/: ask.py
browser/ai_captcha/ask/: chatgpt.py  gemini.py
browser/api/: browser_router.py  health_check.py  model.py  router.py
browser/engine/: const.py  cookies.py  downloads.py  enum.py  helper.py  manager.py  models.py  regex.py  session.py
browser/engine/core/: const.py  enum.py  helper.py  regex.py
browser/engine/features/: cookies.py  downloads.py
browser/engine/manager/: browser_manager.py  tab_manager.py  tablock_mannager.py  user_manager.py
browser/engine/managers/: browser_manager.py  tab_manager.py  tablock_manager.py  user_manager.py
browser/helper/: const.py  system.py
browser/services/: base.py
browser/services/camoufox/: __init__.py  utils.py
browser/services/cloak/: __init__.py
plugins/: README.md  macros.ts  package.json
test/: browser_test.py  session_test.py
