[project]
name = "spider-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camoufox[geoip]>=0.4.11",
    "concurrent-log-handler>=0.9.29",
    "fastapi>=0.135.1",
    "google-genai>=1.68.0",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]
